--- a/SiteDeJogos/src/estilização/pop.css
+++ b/SiteDeJogos/src/estilização/pop.css
@@ -56,7 +56,7 @@
   .titulo-texto{
     width: 57%;
     color: #4B626C;
-    font-family: 'Montserrat';
+    
     font-style: normal;
     margin-left: 5%;
   }
@@ -85,6 +85,7 @@
     height:10vh;
     width: 100vw;
     background-color: #FBF8F4;
+   
   }
 
   .circle{
@@ -93,6 +94,11 @@
     background: #4B626C;
     border-radius: 100%;
     margin-left: 90%;
+    background-image: url(../imagens/carrinho.png);
+    background-size: cover;
+  }
+  .circle:hover{
+    opacity: 0.8;
   }
 /*
   @media (max-width:1620px) {
