--- a/SiteDeJogos/src/estilização/barra.css
+++ b/SiteDeJogos/src/estilização/barra.css
@@ -1,16 +1,20 @@
 .BarraNavegação{
   width: 100vw;
-  height: 15vh;
   background: #FBF6F0;
 }
-.em-ordem{
-  width: 100%;
-  height: 98%;
+
+#retangulo-barra{
+  height: 15vh;
+  width: 100vw;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+}
+
+.palavras{
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  font-size: 3rem;
+  justify-content: space-around;
 }
 
 .imgNavbar{
@@ -22,37 +26,44 @@
   height: 100%;
   width: 100%;
 }
-
-.traço{
-  width: 3rem;
-  height: 0.1rem;
-
-  border: 0.01rem solid #4B626C;
-  transform: rotate(-90deg);
+.menut{
+  list-style-type: none;
 }
-
-.pbarra{
-  color: #4B626C;
+.menut a{
+  list-style-type: none;
+  padding-right: 15%;
+  margin: 2.5rem;
+  font-size: 3rem;
+  color:black;
   text-decoration: none;
   font-family: 'Montsserrat';
   font-weight: 50;
+  border-right: 0.2rem solid black ;
 }
 
-.search{
+.menut a:nth-child(2){
+  border-right: 0;
+}
+
+.pesquisar-menu{
   height:35%;
   width: 11%;
+}
+.pesquisar-menus{
+  height:100%;
+  width: 100%;
   background: rgba(151, 164, 162, 0.45);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
+  margin-top: 18%;
 }
-
-.linha-de-separaçao{
-  width: 100%;
-  height: 20%;
-  background-color: rgb(145, 145, 174);
+#rectangle43{
+  display: none;
 }
-
-.tres-traços{
+#botao-y{
+  display: none;
+}
+#botao-x{
   display: none;
 }
 
@@ -60,88 +71,110 @@
   html{
     font-size: 45%;
   }
-  .BarraNavegação{
-    height: 10vh;
-  }
+
 }
 
 @media (max-width:400px) {
- 
-  .em-ordem{
-    justify-content: space-between;
-  }
-  .pbarra{
-    display: none;
-  }
-  .traço{
-    display: none;
-  }
-  .search{
-    display: none;
-  }
-  .tres-traços{
-    width: 18%;
-    height: 80%;
+  #retangulo-barra{
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    height: 10vh;
+  }
+  #retangulo-barra .pesquisar-menu{
+    display: none;
+  }
+  #retangulo-barra .menut a{
+    display:none;
+  }
+  #retangulo-barra #botao-y{
+    display: none;
+  }
+  #retangulo-barra #botao-y img{
+    background-color: #FBF6F0;
+    display: none;
+  }
+  #retangulo-barra #botao-x{
+    display: flex;
+    height:70%;
+    width: 15%;
+    margin-left: 60%;
+    margin-top: 2%;
+  }
+  #retangulo-barra #botao-x img{
+    width: 100%;
+    height: 100%;
   }
 
-  .um-traço{
-    width: 90%;
-    height: 10%;
-    background-color:#4B626C;
-  }
-  
+  /*rectangle43*/
+
 #rectangle43{
   display: flex;
-  height: 47%;
+  z-index: 999;
+  height:100%;
   width: 100%;
-  background-color: #4B626C;
+  flex-direction: column;
+  background-color:#4B626C;
+}
+#rectangle43 .imgNavbar{
+  display: none;
 }
 
-.menut{
+#rectangle43 .palavras{
+  flex-direction: column;
+}
+
+#rectangle43 .menut{
   list-style-type: none;
   padding:1rem 0rem 1rem 0rem;
   text-align: center;
   border-bottom: 0.3rem solid  white ;
-  width: 40%;
-  margin: 0 auto;
+  width: 50%;
 }
 
-.menut a{
+#rectangle43 .menut a{
+  border-right: 0;
   font-size: 300%;
   text-align: center;
   text-decoration: none;
-  color: white;
-  
+  color:white;
+  margin: 0 auto;
 }
 
-.menut:nth-child(1){
+#rectangle43 .menut:nth-child(1){
   padding-top: 5rem;
 }
-.menut:nth-child(5){
+
+#rectangle43 .menut:nth-child(5){
   border-bottom: 0;
 }
-.pesquisar-menu{
+
+#rectangle43 .pesquisar-menu{
+  width: 60%;
   margin-left: 20%;
+  margin-bottom: 1rem;
 }
-#pesquisar-menu{
+
+#rectangle43 .pesquisar-menus{
   font-family: 'Montserrat';
-  width: 75%;
-  height: 3rem;
+  width: 100%;
+  height: 4rem;
   border-radius: 15px;
   background-color: #97A4A2;
 }
-
-#botao-x{
-  height: 6%;
-  width: 10%;
-  position: absolute;
-  right: 3%;
-  top: 2%;
-  background-image: url(../imagens/x.png);
-  background-size: cover;
+#rectangle43 #botao-x{
+  display: none;
+}
+#rectangle43 #botao-y{
+  margin-top: 5%;
+  display: flex;
+  height:20%;
+  width: 15%;
+  margin-left: 80%;
+  top: 2px;
+}
+#rectangle43 #botao-y img{
+  background-color: #4B626C;
+  height: 100%;
+  width: 100%;
 }
 }
 
