--- a/SiteDeJogos/src/estilização/pop.css
+++ b/SiteDeJogos/src/estilização/pop.css
@@ -1,5 +1,4 @@
-
-  .sessao-branca-populares{
+ .sessao-branca-populares{
     height: 135vh;
     width: 100vw;
     display: flex;
@@ -94,9 +93,15 @@
     background: #4B626C;
     border-radius: 100%;
     margin-left: 90%;
-    background-image: url(../imagens/carrinho.png);
-    background-size: cover;
   }
+
+  .circle img{
+    margin-top: 8%;
+    margin-left: 8%;
+    height: 80%;
+    width: 80%;
+  }
+
   .circle:hover{
     opacity: 0.8;
   }
