--- a/SiteDeJogos/src/estilização/log.css
+++ b/SiteDeJogos/src/estilização/log.css
@@ -79,7 +79,7 @@
 
  .criarConta,
  .esqueceuSenha {
-     font-family: 'Montserrat';
+     text-decoration: none;
      font-style: normal;
      font-weight: 500;
      font-size: 2rem;
