--- a/SiteDeJogos/src/estilização/recup.css
+++ b/SiteDeJogos/src/estilização/recup.css
@@ -72,6 +72,7 @@
   
   .criarConta,
   .fazerLogin{
+  text-decoration: none;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
