--- a/SiteDeJogos/src/estilização/reg.css
+++ b/SiteDeJogos/src/estilização/reg.css
@@ -70,7 +70,7 @@
  }
 
 .button-login{
-font-family: 'Montserrat';
+text-decoration: none;
 font-style: normal;
 font-weight: 500;
 font-size: 2rem;
