--- a/SiteDeJogos/src/estilização/barra.css
+++ b/SiteDeJogos/src/estilização/barra.css
@@ -5,17 +5,18 @@
 
 #retangulo-barra{
   height: 15vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   border-bottom: 2px solid #4B626C;
+  justify-content: space-around;
 }
 
 .palavras{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content:space-around;
 }
 
 .imgNavbar{
@@ -28,6 +29,8 @@
   width: 100%;
 }
 .menut{
+  display: flex;
+  justify-content: space-between;
   list-style-type: none;
 }
 .menut a{
@@ -40,10 +43,11 @@
   font-family: 'Montsserrat';
   font-weight: 50;
   border-right: 0.2rem solid black;
+
 }
 
-.menut a:nth-child(2){
-  border-right: 0;
+.menut a:nth-child(5){
+  border-right: 0rem;
 }
 
 .pesquisar-menu{
@@ -67,15 +71,51 @@
 #botao-x{
   display: none;
 }
-
-@media (max-width:768px) {
-  html{
-    font-size: 45%;
+@media (max-width:1900px) {
+  .menut a{
+    font-size: 2.5rem;
+    margin: 2rem;
   }
-
 }
 
-@media (max-width:400px) {
+@media (max-width:1600px) {
+  .menut a{
+    font-size: 2rem;
+    margin: 1.5rem;
+  }
+  .pesquisar-menu{
+    height: 30%;
+  }
+}
+
+@media (max-width:1200px) {
+  .menut a{
+    font-size: 1.8rem;
+    margin: 1.3rem;
+  }
+}
+
+@media (max-width:1000px) {
+  .menut a{
+    font-size: 1.5rem;
+    margin: 1rem;
+  }
+  .pesquisar-menu{
+    height: 25%;
+  }
+}
+
+@media (max-width:800px) {
+  .menut a{
+    font-size: 1rem;
+    margin: 0.8rem;
+  }
+  .pesquisar-menu{
+    height: 25%;
+  }
+}
+
+@media (max-width:415px) {
   #retangulo-barra{
     display: flex;
     height: 10vh;
@@ -133,7 +173,7 @@
 
 #rectangle43 .menut a{
   border-right: 0;
-  font-size: 300%;
+  font-size: 220%;
   text-align: center;
   text-decoration: none;
   color:white;
@@ -141,7 +181,7 @@
 }
 
 #rectangle43 .menut:nth-child(1){
-  padding-top: 5rem;
+  padding-top: 4rem;
 }
 
 #rectangle43 .menut:nth-child(5){
@@ -157,7 +197,7 @@
 #rectangle43 .pesquisar-menus{
   font-family: 'Montserrat';
   width: 100%;
-  height: 4rem;
+  height: 3rem;
   border-radius: 15px;
   background-color: #97A4A2;
 }
