--- a/SiteDeJogos/src/estilização/carrossel.css
+++ b/SiteDeJogos/src/estilização/carrossel.css
@@ -1,12 +1,12 @@
 .slider-container{
     height: 30vh;
     width: 80vw;
+    margin: 0 auto;
 }
 
 .tres-imagens {
     height: 100%;
     width: 100%;
-    padding-left: 5rem;
     padding-top: 3rem;
     display: flex;
     flex-direction: row;
@@ -31,7 +31,7 @@
     height: 70%;
     background-color: #4B626C;
     margin-top: 70%;
-    border-radius: 10%;
+    border-radius: 10px;
     color: white;
     font-size: 1.5rem;
     font-weight: 700;
@@ -41,11 +41,11 @@
 }
 
 .preços2{
-    width: 50%;
+    width: 70%;
     height: 70%;
     background-color: white;
     margin-top: 70%;
-    border-radius: 10%;
+    border-radius: 10px;
     color: #4B626C;
     font-size: 1.5rem;
     font-weight: 700;
@@ -90,4 +90,10 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+}
+
+@media (max-width:415px){
+    .slider-container{
+        display: none;
+    }
 }
