--- a/SiteDeJogos/src/estilização/log.css
+++ b/SiteDeJogos/src/estilização/log.css
@@ -87,27 +87,21 @@
  }
 
  @media (max-width:1500px) {
-    html {
-        font-size: 80%;
-    }
+   
     .segundaTela{
         height: 110vh;
 
     }
 }
 @media (max-width:1100px) {
-    html {
-        font-size: 70%;
-    }
+  
     .segundaTela{
         height: 90vh;
 
     }
 }
 @media (max-width:850px) {
-    html {
-        font-size: 60%;
-    }
+   
     .segundaTela{
         height: 75vh;
 
@@ -115,30 +109,34 @@
 }
 
  @media (max-width:768px) {
-     html {
-         font-size: 50%;
-     }
+   
      .segundaTela{
         height: 60vh;
      }
  }
 
- @media (max-width:400px){
+ @media (max-width:415px){
     .segundaTela{
+        font-size: 30%;
         width: 100vw;
-        height: 100vh;
+        height: 130vh;
         flex-direction: column;
         flex-direction: column-reverse;
     } 
     .reg2{
+        padding-left: 0;
+        height: 70vh;
         width:100%;
     }
     .container-imagem{
         width: 100%;
+        height: 50vh;
     }
     .container-imagem img{
         width: 100%;
         height: 100%;
     }
-   
+    .setinha{
+        height: 8%;
+    }
  }
