--- a/SiteDeJogos/src/estilização/princ.css
+++ b/SiteDeJogos/src/estilização/princ.css
@@ -1,17 +1,18 @@
 
 .tela-principal {
-    height: 190vh;
-    width: 100vw
+   display: flex;
+   width: 100vw;
+   flex-direction: column;
 }
 
 .parte-cima {
-    height: 78vh;
+    height: 90vh;
     width: 100vw;
     background: #FBF6F0;
 }
 
 .parte-baixo {
-    height: 50vh;
+    height: 60vh;
     width: 100vw;
     background: #4B626C;
 }
@@ -65,6 +66,10 @@
     font-weight: 700;
 }
 
+.tres-imagens-separadas{
+    display: none;
+}
+
 h1 {
     padding-left: 6%;
     font-size: 3.5rem;
@@ -74,60 +79,57 @@ h1 {
     color: #97A4A2;
 }
 
-/*
-@media (max-width:1900px) {
-    html {
-        font-size: 80%;
-    }
-    .tela-principal{
-        height: 83vh;
-    }
-    .parte-cima{
-        height: 60vh;
-    }
-    .parte-baixo{
-        height: 40vh;
-    }
-}
+
+
 @media (max-width:1400px) {
-    html {
-        font-size: 70%;
-    }
-    .tela-principal{
-        height: 83vh;
-    }
     .parte-cima{
-        height: 55vh;
+        height: 90vh;
     }
     .parte-baixo{
-        height: 30vh;
+        height: 60vh;
     }
 }
 @media (max-width:1100px) {
-    html {
-        font-size: 60%;
-    }
-    .tela-principal{
-        height: 83vh;
-    }
     .parte-cima{
-        height: 45vh;
+        height: 65vh;
     }
     .parte-baixo{
-        height: 22vh;
+        height: 50vh;
+    }
+}
+@media (max-width:850px) {
+    .parte-baixo{
+        height: 60vh;
     }
 }
 @media (max-width:768px) {
-    html {
-        font-size: 40%;
-    }
-    .tela-principal{
-        height: 83vh;
-    }
     .parte-cima{
-        height: 30vh;
+        height: 50vh;
     }
     .parte-baixo{
-        height: 18vh;
+        height: 45vh;
     }
-}*/
+}
+
+@media (max-width:415px) {
+    .parte-cima{
+        height: 40vh;
+    }
+    .parte-baixo{
+        height: 45vh;
+    }
+    .lado-direito{
+        width: 15%;
+        margin-top: 40%;
+    }
+    .cart{
+        height: 18%;
+        margin-right: 10%;
+    }
+    .tres-imagens-prin{
+        display: none;
+    }
+    .tres-imagens-separadas{
+        display: flex;
+    }
+}
