--- a/SiteDeJogos/src/estilização/recup.css
+++ b/SiteDeJogos/src/estilização/recup.css
@@ -81,27 +81,21 @@
   }
   
   @media (max-width:1500px) {
-    html {
-        font-size: 80%;
-    }
+  
     .segundaTela{
         height: 110vh;
 
     }
 }
 @media (max-width:1100px) {
-    html {
-        font-size: 70%;
-    }
+ 
     .segundaTela{
         height: 90vh;
 
     }
 }
 @media (max-width:850px) {
-    html {
-        font-size: 60%;
-    }
+    
     .segundaTela{
         height: 75vh;
 
@@ -109,23 +103,23 @@
 }
 
  @media (max-width:768px) {
-     html {
-         font-size: 50%;
-     }
+   
      .segundaTela{
         height: 60vh;
      }
  }
 
 
-  @media (max-width:400px){
+  @media (max-width:415px){
     .segundaTela{
+        font-size: 30%;
         width: 100vw;
-        height: 100vh;
+        height: 130vh;
         flex-direction: column;
         flex-direction: column-reverse;
     } 
     .reg{
+        padding-left: 0;
         width:100%;
     }
     .container-imagem{
