--- a/SiteDeJogos/src/estilização/responsive.css
+++ b/SiteDeJogos/src/estilização/responsive.css
@@ -4,6 +4,11 @@
     margin: 0 auto;
 }
 
+.slick-track {
+    display: flex;
+    gap: 15px; /* Espaçamento entre os slides */
+  }
+
 .rets1 {
     height: 100%;
     width: 15%;
@@ -15,36 +20,35 @@
     width: 15%;
     background-image: url(../imagens/Ret14.jpg);
     background-size: cover;
-    margin-left: 1rem;
+   
 }
 .rets3 {
     height: 100%;
     width: 15%;
     background-image: url(../imagens/Ret15.jpg);
     background-size: cover;
-    margin-left: 1rem;
-    padding-right: 1rem;
+
 }
 .rets4 {
     height: 100%;
     width: 15%;
     background-image: url(../imagens/Ret16.jpg);
     background-size: cover;
-    margin-left: 1rem;
+
 }
 .rets5 {
     height: 100%;
     width: 15%;
     background-image: url(../imagens/Ret17.jpg);
     background-size: cover;
-    margin-left: 1rem;
+   
 }
 
 .prices{
     margin-left: 2%;
     margin-top: 110%;
     z-index: 2;
-    width: 40%;
+    width: 60%;
     height: 9%;
     background-color:white;
     border-radius: 8px;
@@ -54,4 +58,11 @@
     font-size: 1.3rem;
     color: #4B626C;
     font-weight: 700;
+}
+
+@media (max-width:415px) {
+    .slider-container-responsive{
+        width: 60vw;
+        height: 20vh;
+    }
 }
